--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                         >
                     </li>
                     <li>
-                        <a href="#section-2" class="nav__list-text nav-option">Meals</a>
+                        <a href="#section-2" class="nav__list-text nav-option"
+                            >Meals</a
+                        >
                     </li>
                     <li>
                         <a href="#section-3" class="nav__list-text nav-option"
@@ -49,7 +51,9 @@
                         >
                     </li>
                     <li>
-                        <a href="#section-4" class="nav__list-text nav-option">Pricing</a>
+                        <a href="#section-4" class="nav__list-text nav-option"
+                            >Pricing</a
+                        >
                     </li>
                     <li>
                         <a href="#section-5" class="nav__list-btn nav-option"
@@ -142,7 +146,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section__feature" id="section-1">
+            <section class="section-- section__feature" id="section-1">
                 <div class="section__feature-box">
                     <h2 class="section__feature-title">As featured in</h2>
                     <div class="section__image">
@@ -194,8 +198,9 @@
                     <div class="section__left-2">
                         <img
                             src="./img/app/app-screen-2.png"
+                            data-src="./img/app/app-screen-2.png"
                             alt="App Screen 2"
-                            class="section__ft-img"
+                            class="section__ft-img lazy-img"
                         />
                     </div>
                     <div class="section__left-3">
@@ -214,8 +219,9 @@
                     <div class="section__right-1">
                         <img
                             src="./img/app/app-screen-1.png"
+                            data-src="./img/app/app-screen-1.png"
                             alt="App Screen 1"
-                            class="section__ft-img"
+                            class="section__ft-img lazy-img"
                         />
                     </div>
                     <div class="section__right-2">
@@ -232,13 +238,14 @@
                     <div class="section__right-3">
                         <img
                             src="./img/app/app-screen-3.png"
+                            data-src="./img/app/app-screen-3.png"
                             alt="App Screen 3"
-                            class="section__ft-img"
+                            class="section__ft-img lazy-img"
                         />
                     </div>
                 </div>
             </section>
-            <section class="section__meal" id="section-2">
+            <section class="section-- section__meal" id="section-2">
                 <div class="section__meal-header">
                     <h2 class="section__meal-title">MEALS</h2>
                     <h1 class="section__meal-des">
@@ -404,7 +411,7 @@
                     <div class="line"></div>
                 </div>
             </section>
-            <section class="section__testimonials" id="section-3">
+            <section class="section-- section__testimonials" id="section-3">
                 <div class="section__testimonials-container">
                     <div class="section__testimonials-left">
                         <div class="section__testimonials-header">
@@ -470,46 +477,45 @@
                     </div>
                     <div class="section__testimonials-right">
                         <div class="section__testimonials-img">
-                            <img src="./img/gallery/gallery-1.jpg" alt="" />
+                            <img src="./img/gallery/gallery-1.jpg" data-src="./img/gallery/gallery-1.jpg" alt="" class="lazy-img"/>
                         </div>
                         <div class="section__testimonials-img">
-                            <img src="./img/gallery/gallery-2.jpg" alt="" />
+                            <img src="./img/gallery/gallery-2.jpg" data-src="./img/gallery/gallery-2.jpg" alt="" class="lazy-img"/>
                         </div>
                         <div class="section__testimonials-img">
-                            <img src="./img/gallery/gallery-3.jpg" alt="" />
+                            <img src="./img/gallery/gallery-3.jpg" data-src="./img/gallery/gallery-3.jpg" alt="" class="lazy-img"/>
                         </div>
                         <div class="section__testimonials-img">
-                            <img src="./img/gallery/gallery-4.jpg" alt="" />
+                            <img src="./img/gallery/gallery-4.jpg" data-src="./img/gallery/gallery-4.jpg" alt="" class="lazy-img"/>
                         </div>
                         <div class="section__testimonials-img">
-                            <img src="./img/gallery/gallery-5.jpg" alt="" />
-                        </div>
-
-                        <div class="section__testimonials-img">
-                            <img src="./img/gallery/gallery-6.jpg" alt="" />
+                            <img src="./img/gallery/gallery-5.jpg" data-src="./img/gallery/gallery-5.jpg" alt="" class="lazy-img"/>
                         </div>
                         <div class="section__testimonials-img">
-                            <img src="./img/gallery/gallery-7.jpg" alt="" />
+                            <img src="./img/gallery/gallery-6.jpg" data-src="./img/gallery/gallery-6.jpg" alt="" class="lazy-img"/>
                         </div>
                         <div class="section__testimonials-img">
-                            <img src="./img/gallery/gallery-8.jpg" alt="" />
+                            <img src="./img/gallery/gallery-7.jpg" data-src="./img/gallery/gallery-7.jpg" alt="" class="lazy-img"/>
                         </div>
                         <div class="section__testimonials-img">
-                            <img src="./img/gallery/gallery-9.jpg" alt="" />
+                            <img src="./img/gallery/gallery-8.jpg" data-src="./img/gallery/gallery-8.jpg" alt="" class="lazy-img"/>
                         </div>
                         <div class="section__testimonials-img">
-                            <img src="./img/gallery/gallery-10.jpg" alt="" />
+                            <img src="./img/gallery/gallery-9.jpg" data-src="./img/gallery/gallery-9.jpg" alt="" class="lazy-img"/>
                         </div>
                         <div class="section__testimonials-img">
-                            <img src="./img/gallery/gallery-11.jpg" alt="" />
+                            <img src="./img/gallery/gallery-10.jpg" data-src="./img/gallery/gallery-10.jpg" alt="" class="lazy-img"/>
                         </div>
                         <div class="section__testimonials-img">
-                            <img src="./img/gallery/gallery-12.jpg" alt="" />
+                            <img src="./img/gallery/gallery-11.jpg" data-src="./img/gallery/gallery-11.jpg" alt="" class="lazy-img"/>
+                        </div>
+                        <div class="section__testimonials-img">
+                            <img src="./img/gallery/gallery-12.jpg" data-src="./img/gallery/gallery-12.jpg" alt="" class="lazy-img"/>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="section__pricing" id="section-4">
+            <section class="section-- section__pricing" id="section-4">
                 <div class="section__pricing-header">
                     <h2 class="section__pricing-title">PRICING</h2>
                     <h1 class="section__pricing-des">
@@ -666,7 +672,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section__contact" id="section-5">
+            <section class="section-- section__contact" id="section-5">
                 <div class="section__contact-box">
                     <div class="section__contact-container">
                         <div class="section__contact-header">
@@ -727,7 +733,7 @@
                 </div>
             </section>
         </main>
-        <footer class="footer">
+        <footer class="section-- footer">
             <div class="footer__box">
                 <div class="footer__container">
                     <div class="footer__MXH">
